package br.com.ecommerce.model.observer;

public interface Observador {
    void atualizar(String mensagem);
}