package br.com.ecommerce.model.strategy;

public interface CalculoFrete {
    double calcular(double valor);
}